# model.python-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  Dockerfile  Dockerfile.gpu  MANIFEST.in  Makefile  README.md  VERSION.txt  __init__.py  compose.yml  cookiecutter.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt  setup.py  sitemap.xml  versions.json
.github/: dependabot.yml
.github/workflows/: 1.bump-version.yml  2.build-publish.yml  3.create-release.yml  3.update-changelog.yml  publish-docs.yml
2.0/: 404.html  CNAME  index.html  sitemap.xml
2.0/about/authors/: index.html
2.0/about/contact/: index.html
2.0/blog/: index.html
2.0/release-notes/: index.html
2.0/search/: search_index.json
3.0/: 404.html  index.html  objects.inv  sitemap.xml
3.0/blog/: index.html
3.0/release-notes/: index.html
3.0/search/: search_index.json
docs/: .nav.yml  README.md  release-notes.md
docs/about/: .meta.yml  .nav.yml  authors.md  contact.md  faq.md  license.md
docs/api-docs/: .meta.yml  .nav.yml  ModelConfigPM.md  SimpleModel.md
docs/blog/: .authors.yml  index.md
docs/dev/: .meta.yml  contributing.md  diagrams.md  docs.md  file-structure.md  related-projects.md  roadmap.md  sitemap.md  test.md
docs/getting-started/: .meta.yml  .nav.yml  configuration.md  error-codes.md  examples.md  installation.md  prerequisites.md
docs/pages/: changelog.md  release-notes.md
docs/research/: .nav.yml  references.md  reports.md
docs/scripts/: 3.get-version.md  5.bump-version.md  6.build.md
examples/: requirements.txt
examples/simple/: main.py
model_template/: __version__.py  model_template.py
notebooks/: 1.0.initial_exploration.ipynb  example.ipynb
pages/: index.html
pages/about/: index.html
pages/api-docs/: index.html
pages/blog/: index.html
pages/dev/: index.html
pages/getting-started/: index.html
pages/release-notes/: index.html
pages/research/: index.html
requirements/: requirements.dev.txt  requirements.docs.txt  requirements.extra.txt  requirements.test.txt
scripts/: base.sh  build.sh  bump-version.sh  changelog.sh  clean.sh  diagrams.sh  docs.sh  get-version.sh  release.sh  test.sh
scripts/docker/: docker-entrypoint.sh
search/: search_index.json
simple_model/: _base.py  _consts.py  schemas.py
simple_model/modules/: __init__.py
src/simple_model/: __init__.py  _base.py  _consts.py  _utils.py  config.py  version.py
templates/compose/: compose.override.dev.gpu.yml  compose.override.dev.yml  compose.override.gpu.yml
templates/configs/: config.json  config.yml
tests/: conftest.py  test_generated.py  test_simple_model.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  __init__.py  compose.sh  compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: CODEOWNERS
{{cookiecutter.project_slug}}/.github/workflows/: 1.bump-version.yml  2.build-publish.yml  3.update-changelog.yml  publish-docs.yml
{{cookiecutter.project_slug}}/docs/: .nav.yml  CNAME  README.md  release-notes.md
{{cookiecutter.project_slug}}/docs/about/: authors.md  contact.md  license.md
{{cookiecutter.project_slug}}/docs/api-docs/: .nav.yml  ModelConfigPM.md  SimpleModel.md
{{cookiecutter.project_slug}}/docs/blog/: .authors.yml  .meta.yml
{{cookiecutter.project_slug}}/docs/blog/posts/: post-1.md
{{cookiecutter.project_slug}}/docs/dev/: .nav.yml  build.md  diagrams.md  file-structure.md  sitemap.md
{{cookiecutter.project_slug}}/docs/dev/cicd/: .meta.yml  .nav.yml  1.bump-version.md  2.build-publish.md  3.update-changelog.md  README.md  publish-docs.md
{{cookiecutter.project_slug}}/docs/dev/scripts/: .nav.yml  build.sh.md  bump-version.sh.md  docs.sh.md  get-version.sh.md  test.sh.md
{{cookiecutter.project_slug}}/docs/getting-started/: configuration.md  error-codes.md  examples.md  installation.md  prerequisites.md
{{cookiecutter.project_slug}}/docs/pages/about/: authors.md  contact.md  license.md
{{cookiecutter.project_slug}}/docs/pages/api-docs/: ModelConfigPM.md  README.md  SimpleModel.md
{{cookiecutter.project_slug}}/docs/pages/blog/: README.md
{{cookiecutter.project_slug}}/docs/pages/dev/: README.md  cicd.md  contributing.md  diagrams.md  file-structure.md  related-projects.md  roadmap.md  sitemap.md  test.md
{{cookiecutter.project_slug}}/docs/pages/dev/cicd/: 1.bump-version.md  2.build-publish.md  README.md  publish-docs.md
{{cookiecutter.project_slug}}/docs/pages/dev/scripts/: 2.clean.md  3.get-version.md  4.test.md  5.bump-version.md  README.md
{{cookiecutter.project_slug}}/docs/pages/getting-started/: configuration.md  error-codes.md  examples.md  installation.md  prerequisites.md
{{cookiecutter.project_slug}}/docs/pages/research/: benchmarks.md
{{cookiecutter.project_slug}}/docs/research/: .meta.yml  benchmarks.md
{{cookiecutter.project_slug}}/examples/simple/: main.py
{{cookiecutter.project_slug}}/notebooks/: example.ipynb
{{cookiecutter.project_slug}}/requirements/: requirements.build.txt  requirements.dev.txt  requirements.docs.txt  requirements.test.txt
{{cookiecutter.project_slug}}/scripts/: build.sh  bump-version.sh  changelog.sh  clean.sh  diagrams.sh  docs.sh  get-version.sh  release.sh  test.sh
{{cookiecutter.project_slug}}/scripts/docker/: docker-entrypoint.sh
{{cookiecutter.project_slug}}/src/modules/: __init__.py
{{cookiecutter.project_slug}}/src/simple_model/: __init__.py  _utils.py  config.py  schemas.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  _base.py  _utils.py
{{cookiecutter.project_slug}}/templates/compose/: compose.override.dev.gpu.yml  compose.override.dev.yml  compose.override.gpu.yml
{{cookiecutter.project_slug}}/templates/configs/: config.json  config.yml
{{cookiecutter.project_slug}}/tests/: test_generated.py  test_simple_model.py  test_{{cookiecutter.module_name}}.py
(+178 files in other folders)
