[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_model"
description = "simple_model is a template for python AI/ML module."
readme = "README.md"
authors = [
    { name = "Batkhuu Byambajav", email = "batkhuu10@gmail.com" }
]
license = { file = "LICENSE" } # Ensure you have a LICENSE file at the project root
keywords = ["simple_model", "model", "module", "template", "ai/ml/dl", "artificial-intelligence", "machine-learning", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
python-requirements = ">=3.9"
dependencies = [
    "scikit-learn>=1.5.2,<2.0.0"
]

[tool.setuptools_scm]
# Optional configuration for setuptools_scm
write_to = "simple_model/version.py" # Writes the version to a Python file in your package
fallback_version = "0.1.0" # Used if setuptools_scm can't detect a version
