[build-system]
requires = ["setuptools>=70.3.0,<81.0.0", "setuptools-scm>=8.0.4,<10.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.module_name}}"
authors = [{ name = "{{cookiecutter.author_fullname}}", email = "{{cookiecutter.author_email}}" }]
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}},<4.0"
keywords = [
	"{{cookiecutter.module_name}}",
	"model",
	"module",
	"ai/ml/dl",
	"artificial-intelligence",
	"machine-learning",
	"deep-learning",
]
license-files = ["LICEN[CS]E*"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["{{cookiecutter.module_name}}*"]
# namespaces = false

[tool.setuptools.dynamic]
version = { attr = "{{cookiecutter.module_name}}.__version__.__version__" }
dependencies = { file = "./requirements.txt" }
# optional-dependencies.gpu = { file = ["./requirements/requirements.gpu.txt"] }
optional-dependencies.test = { file = ["./requirements/requirements.test.txt"] }
optional-dependencies.build = { file = [
	"./requirements/requirements.build.txt",
] }
optional-dependencies.docs = { file = ["./requirements/requirements.docs.txt"] }
optional-dependencies.dev = { file = [
	"./requirements/requirements.test.txt",
	"./requirements/requirements.build.txt",
	"./requirements/requirements.docs.txt",
	"./requirements/requirements.dev.txt",
] }

# [tool.pyright]
# venvPath = "."
# venv = ".venv"

[project.urls]
Homepage = "https://github.com/{{cookiecutter.repo_owner}}/{{cookiecutter.repo_name}}"
Documentation = "https://{{cookiecutter.docs_domain}}"
Repository = "https://github.com/{{cookiecutter.repo_owner}}/{{cookiecutter.repo_name}}.git"
Issues = "https://github.com/{{cookiecutter.repo_owner}}/{{cookiecutter.repo_name}}/issues"
Changelog = "https://github.com/{{cookiecutter.repo_owner}}/{{cookiecutter.repo_name}}/blob/main/CHANGELOG.md"
